@@ -1512,11 +1512,11 @@ C=
 <![CDATA[ -1-x & 2 \\]]>
 <![CDATA[ -6    & 6-x]]>
 \end{vmatrix}\\
-<![CDATA[&=(-1-x)(6-x)-(2)(-6)\\]]>
+<![CDATA[&=(-1-x)(6-x)-(2)(-6)&&]]>\text{<acroref type="theorem" acro="DMST" />}\\
 <![CDATA[&=x^2-5x+6\\]]>
 <![CDATA[&=(x-3)(x-2)]]>
 </alignmath>
-So the eigenvalues of $C$ are the solutions to $\charpoly{C}{x}=0$, namely, $\lambda=2$ and $\lambda=3$.<br /><br />
+So the eigenvalues of $C$ are the solutions to $\charpoly{C}{x}=0$, namely, $\lambda=2$ and $\lambda=3$.  Each eigenvalue has a factor that appears just once in the characteristic polynomial, so $\algmult{A}{2}=1$ and $\algmult{A}{3}=1$.<br /><br />
 To obtain the eigenspaces, construct the appropriate singular matrices and find expressions for the null spaces of these matrices.
 <alignmath>
 <![CDATA[\lambda&=2\\]]>
@@ -1552,6 +1552,7 @@ To obtain the eigenspaces, construct the appropriate singular matrices and find 
 =
 \spn{\set{\colvector{1\\2}}}
 </alignmath>
+Each eigenspace has a single basis vector, so the dimensions are both $1$ and the geometric multiplicities are $\geomult{A}{2}=1$ and $\geomult{A}{3}=1$.
 </solution>
 </exercise>
 
