@@ -9,6 +9,7 @@ New:  Exercise LISS.T51, converse of Theorem VRRB
 New:  Exercise LISS.T20, subset of linearly independent set is linearly independent
 Edit:  Explained  min(m,n)  in Exercise PD.T15
 Edit:  More on induction in Proof Technique I (Dan Messenger)
+Edit:  Added multiplicities to Solution EE.C19 (Duncan Bennett)
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
